cmake_minimum_required(VERSION 3.20)
project(DSA2)

set(CMAKE_CXX_STANDARD 14)

add_executable(DSA2 main.cpp labor1.cpp labor1.h constants.h labor2.cpp labor2.h labor3.cpp labor3.h labor4.cpp labor4.h labor5.cpp labor5.h labor6.cpp labor6.h labor8.cpp labor8.h labor11.cpp labor11.h)
include_directories(DSA2)
